--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,20 @@
     border: 1px solid #ddd;
     text-align: center;
   }
+
+  .smallBox {
+    border: 1px solid black;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+}
+
+.permahover {
+    background: red;
+}
+
+h1 {
+    text-align: center;
+}
+
+
