--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,22 @@
   
   #container {
     display: grid;
-    grid-gap: 0em;
+    justify-self: center;
+    margin: auto;
+    margin-top: 5px;
+    width: 80vh;
+    height: 80vh;
+    max-height: 82vh;
+    max-width: 82vh;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
   }
   
   #grid-item {
-    padding: 1em;
     border: 1px solid #ddd;
     text-align: center;
   }
 
-  .smallBox {
-    border: 1px solid black;
-    width: 20px;
-    height: 20px;
-    display: inline-block;
-}
 
 .permahover {
     background: red;
@@ -31,4 +30,6 @@ h1 {
     text-align: center;
 }
 
-
+#button {
+  display: inline-block;
+}
